# Repository-to-RLenv

./: .gitignore  Dockerfile  README.md  openenv.yaml  pyproject.toml
.claude/commands/: convert_to_rl_env.md
conversations/: cleanco.txt  click.txt  glom.txt  more-itertools.txt  nanopq.txt  number-parser.txt  pluggy.txt  requests.txt  toolz.txt
notebooks/: repo2env_grpo_training.ipynb
outputs/trajectories/: repo2env-requests-bug-1-staged-gpt-4.1-mini-3fb4caa6-708f-45eb-b00e-76cf79dcfdf5.json  repo2env-requests-bug-1-staged-gpt-5-mini-d40a0b8d-3f87-486e-a428-ebdae0d90a92.json
repo2env/app/: __init__.py  agent_runner.py  benchmark_prep.py  demo.py  env.py  inference.py  ingest.py  install.py  logger.py  manifest.py  rewards.py  sandbox.py  smoke_test.py  task_spec.py  tooling.py  training_stub.py  validator.py
repo2env/conversion/: __init__.py  converter.py  spec.py
repo2env/mcp/: __init__.py  server.py
repo2env/openenv/: __init__.py  client.py  environment.py  models.py  server.py  webui.py
server/: __init__.py  app.py  environment.py
tests/: test_agent_runner.py  test_conversion.py  test_inference.py  test_manifest.py  test_mcp_server.py  test_openenv_integration.py  test_server_cli.py  test_setup_and_tasks.py  test_smoke_test.py  test_task_execution.py  test_task_spec.py  test_web_ui.py
